# RL_Project

./: .gitignore  README.md  best_training_reward_callback.py  custom_wrappers.py  dqn.py  envs.py  evaluation.py  good_parameters.py  learning.py  network.py  plot.py  plot2.py  plot_stats.py  project_documentation.md  projekt_info.md  pyproject.toml  render_callback.py  reward_shaping.py  rl_guidelines.md  run.py  run_all.py  statistical_testing.py  test.py  test2.py  test_run.py  transfer.py
log_2nd_transfer_5x5_to_7x7/DQN_1/: events.out.tfevents.1754650336.Flos_Laptop.34064.0
log_2nd_transfer_5x5_to_7x7/DQN_10/: events.out.tfevents.1754652118.Flos_Laptop.34064.9
log_2nd_transfer_5x5_to_7x7/DQN_11/: events.out.tfevents.1754652315.Flos_Laptop.34064.10
log_2nd_transfer_5x5_to_7x7/DQN_12/: events.out.tfevents.1754652513.Flos_Laptop.34064.11
log_2nd_transfer_5x5_to_7x7/DQN_13/: events.out.tfevents.1754652709.Flos_Laptop.34064.12
log_2nd_transfer_5x5_to_7x7/DQN_14/: events.out.tfevents.1754652910.Flos_Laptop.34064.13
log_2nd_transfer_5x5_to_7x7/DQN_15/: events.out.tfevents.1754653108.Flos_Laptop.34064.14
log_2nd_transfer_5x5_to_7x7/DQN_16/: events.out.tfevents.1754653305.Flos_Laptop.34064.15
log_2nd_transfer_5x5_to_7x7/DQN_17/: events.out.tfevents.1754653508.Flos_Laptop.34064.16
log_2nd_transfer_5x5_to_7x7/DQN_18/: events.out.tfevents.1754653730.Flos_Laptop.34064.17
log_2nd_transfer_5x5_to_7x7/DQN_19/: events.out.tfevents.1754653952.Flos_Laptop.34064.18
plotting/: plot2.py  plot_mean.py  plot_mean_running_max.py
trained_models/: constants.py
(+296 files in other folders)
